@@ -1,6 +1,6 @@
 #!@FONTFORGE@
 
-# all your braces are belong to us
+# all your brace are belong to us
 
 New();
 
